modification à apporter suite à la soutenance

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap" rel="stylesheet">
 	<title>Booki</title>
 </head>
 
@@ -41,13 +41,15 @@
 			</form>
 			<div class="menu--filtre menu--margin--bottom">
 				<p>Filtres</p>
-				<div class="menu--filtre--categorie">
-					<i class="fa-solid fa-money-bill-wave"></i>
-					<p class="menu--filtre--radius">Économique</p>
-				</div>
-				<div class="menu--filtre--categorie">
-					<i class="fa-solid fa-child-reaching"></i>
-					<p class="menu--filtre--radius">Familial</p>
+				<div class="menu--deux-filtres">
+					<div class="menu--filtre--categorie">
+						<i class="fa-solid fa-money-bill-wave"></i>
+						<p class="menu--filtre--radius">Économique</p>
+					</div>
+					<div class="menu--filtre--categorie">
+						<i class="fa-solid fa-child-reaching"></i>
+						<p class="menu--filtre--radius">Familial</p>
+					</div>
 				</div>
 				<div class="menu--filtre--categorie">
 					<i class="fa-solid fa-heart"></i>
@@ -172,7 +174,7 @@
 			<aside class="location--populaire section--commune">
 				<div class="location--titre--logo">
 					<h2>Les plus populaires</h2>
-					<i class="fa fa-line-chart" aria-hidden="true"></i>
+					<i class="fa-solid fa-chart-line" aria-hidden="true"></i>
 				</div>
 				<div class="location--liste--pop">
 					<!-- partie hébergements populaires -->
