dernière retouche avant soutenance

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <body>
 	<!-- header -->
 	<header class="header">
-		<img src="./images/logo/Booki.png" alt="" class="header--logo">
+		<img src="./images/logo/Booki.png"
+			srcset="./images/logo/Booki.png 191w, ./images/logo/Booki@3x.png 285w"
+			sizes="(max-width: 768px) 285px, 191px" 
+			alt="Le logo principal du site web" class="header--logo">
 		<nav class="header--nav">
 			<ul>
 				<li><a href="#hebergements">Hébergements</a></li>
